replaced Integer.valueOf(int) with new Integer(int) as this method is only available in JDK 1.5